force-app/main/default/objects/Condicion_de_pago__c/fields/Condicion__c.field-meta.xml
<CustomField>
    <fullName>Condicion__c</fullName>
    <label>Condición</label>
    <length>255</length>
    <type>Text</type>
</CustomField>