force-app/main/default/objects/Condicion_de_pago__c/fields/Das_Dcto__c.field-meta.xml
<CustomField>
    <fullName>Das_Dcto__c</fullName>
    <label>Días Dcto.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>