force-app/main/default/objects/Condicion_de_pago__c/fields/Das_nt_ppagar__c.field-meta.xml
<CustomField>
    <fullName>Das_nt_ppagar__c</fullName>
    <label>Días nt p/pagar</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>