force-app/main/default/objects/Condicion_de_pago__c/fields/Dcto__c.field-meta.xml
<CustomField>
    <fullName>Dcto__c</fullName>
    <label>% Dcto.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>